--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
 body {
-  font-family: Arial, Helvetica, sans-serif
+  background-color: yellow;
+  font-family:'Times New Roman', Times, serif
+}
+
+h1 {
+  font-style: italic;
+  color: navy;
 }
