--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
 body {
-  font-family: Arial, Helvetica, sans-serif
+  background-color: salmon;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+h1 {
+  font-weight: bolder;
+  color: red;
 }
